sort.pancake.BubblePancake.scala.error
Erreur de compilation :
BubblePancake:23: error: reassignment to val
  if (i=1) {
       ^